--- a/public/hidden-form-contatti.html
+++ b/public/hidden-form-contatti.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- A little help for the Netlify post-processing bots -->
+    <!-- A little help for the Netlify post-processing bots s -->
     <form data-netlify="true" data-netlify-honeypot="mail-confirm" hidden name="contact">
         <input type="text" name="nome" id="nome" />
         <input type="text" name="nome" id="nome" />
