--- a/public/hidden-form-contatti.html
+++ b/public/hidden-form-contatti.html
@@ -8,17 +8,12 @@
 </head>
 
 <body>
-    <!-- A little help for the Netlify post-processing bots s -->
-    <form data-netlify="true" data-netlify-honeypot="mail-confirm" hidden name="contact">
+    <!-- A little help for the Netlify post-processing bots -->
+    <form netlify hidden name="contact">
         <input type="text" name="nome" id="nome" />
         <input type="text" name="nome" id="nome" />
         <input type="email" name="email" id="youremail" />
         <textarea name="message" id="yourmessage"></textarea>
-        <p hidden>
-            <label>
-                <input name="mail-confirm" />
-            </label>
-        </p>
     </form>
 </body>
 
