--- a/public/hidden-form-contatti.html
+++ b/public/hidden-form-contatti.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hidden form contatti</title>
-</head>
+<head></head>
 
 <body>
-    <!-- A little help for the Netlify post-processing bots -->
-    <form netlify hidden name="contact">
-        <input type="text" name="nome" id="nome" />
-        <input type="text" name="nome" id="nome" />
-        <input type="email" name="email" id="youremail" />
-        <textarea name="message" id="yourmessage"></textarea>
+    <form name="feedback" data-netlify="true" hidden>
+        <input type="hidden" name="form-name" value="feedback" />
+        <input name="name" type="text" />
+        <input name="email" type="text" />
+        <input name="message" type="text" />
     </form>
 </body>
 
