--- a/public/__formcontatti.html
+++ b/public/__formcontatti.html
@@ -7,7 +7,7 @@
     <form name="contatti" data-netlify="true" hidden data-netlify-honeypot="mail-confirm">
         <input type="hidden" name="contatti" value="feedback" />
         <input type="text" name="nome" id="nome" required />
-        <input type="text" name="nome" id="nome" required />
+        <input type="text" name="cognome" id="cognome" required />
         <input type="email" name="email" id="youremail" required />
         <textarea name="message" id="yourmessage" required></textarea>
         <input name="mail-confirm" />
