--- a/public/__formlavora.html
+++ b/public/__formlavora.html
@@ -9,7 +9,7 @@
         <input type="text" name="nome" id="nome" required />
         <input type="text" name="nome" id="nome" required />
         <input type="email" name="email" id="youremail" required />
-        <select className={style.candidatura}>
+        <select>
         </select>
         <textarea name="message" id="yourmessage" required></textarea>
         <input name="mail-confirm" />
