--- a/public/formlavora.html
+++ b/public/formlavora.html
@@ -9,9 +9,9 @@
         <input type="text" name="nome" id="nome" required />
         <input type="text" name="cognome" id="cognome" required />
         <input type="email" name="email" id="youremail" required />
-        <select name="richiesta" id="richiesta" className={style.candidatura}>
+        <!--         <select name="richiesta" id="richiesta" className={style.candidatura}>
             <option value="candidatura">Candidatura</option>
-        </select>
+        </select> -->
         <textarea name="message" id="yourmessage" required></textarea>
         <input name="mail-confirm" />
 
