--- a/public/formlavora.html
+++ b/public/formlavora.html
@@ -14,7 +14,7 @@
         </select> -->
         <textarea name="message" id="yourmessage" required></textarea>
         <input name="mail-confirm" />
-
+    </form>
 </body>
 
 </html>
